<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_scroll_view"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/url_input_layout"
            style="@style/roundInputTextField"
            android:hint="@string/url_example"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/url_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            style="@style/headerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/request_type"
            app:layout_constraintStart_toStartOf="@+id/url_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/url_input_layout" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/url_input_layout"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView">

            <RadioButton
                android:id="@+id/get_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/get" />

            <RadioButton
                android:id="@+id/post_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/post" />
        </RadioGroup>


        <TextView
            android:id="@+id/textView2"
            style="@style/headerTextStyle"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:text="@string/request_headers"
            app:layout_constraintEnd_toStartOf="@+id/btnAddHeaders"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <ImageView
            android:id="@+id/btnAddHeaders"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="4dp"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:tint="@color/addBtnColor" />

        <LinearLayout
            android:id="@+id/header_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAddHeaders">

        </LinearLayout>


        <TextView
            android:id="@+id/textView12"
            style="@style/headerTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:text="@string/query_parameters"
            app:layout_constraintEnd_toStartOf="@+id/btnAddHeaders"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/header_ll" />

        <ImageView
            android:id="@+id/btnAddQueryPrams"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="4dp"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            app:tint="@color/addBtnColor" />

        <LinearLayout
            android:id="@+id/params_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAddQueryPrams">

        </LinearLayout>


        <TextView
            android:id="@+id/textView3"
            style="@style/headerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/request_body"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/params_ll" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/request_body_input_layout"
            style="@style/roundInputTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/request_body_example"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/request_body_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:maxHeight="250dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/request"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/request_body_input_layout"
            app:layout_constraintVertical_bias="1" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/request_body_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="request_body_input_layout,textView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
